--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Test
-        run: ./script/build.sh
+        run: ./script/test.sh
